# licut

./: .gitignore  README.md
doc/: README  Using_Inkscape.txt
src/: CMakeLists.txt  Makefile
